# accounti

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  accounti.example.yaml  beispiel_sparkasse.csv  bug-report.md  pyproject.toml  test_steuer.py
.github/ISSUE_TEMPLATE/: bank-format.md
.github/workflows/: ci.yaml
config/: skr03.yaml
docs/: architektur.md
src/accounti/: __init__.py  cli.py  oss.py  umsatzsteuer.py
src/accounti/bwa/: berechnung.py
src/accounti/export/: datev.py
src/accounti/klassifikation/: engine.py
src/accounti/steuer/: eu_steuersaetze.py  voranmeldung.py
tests/: test_datev_export.py  test_klassifikation.py
