[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accounti"
version = "0.1.0-dev"
description = "KI-gestützte Buchhaltungsautomatisierung für deutsche Unternehmen"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "accounti contributors" },
]
keywords = ["accounting", "buchhaltung", "datev", "skr03", "bwa", "ai", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "litellm>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
accounti = "accounti.cli:app"

[project.urls]
Homepage = "https://github.com/DEIN-USER/accounti"
Documentation = "https://github.com/DEIN-USER/accounti/tree/main/docs"
Repository = "https://github.com/DEIN-USER/accounti"
Issues = "https://github.com/DEIN-USER/accounti/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/accounti"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
